# baton

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  agent.yaml  pyproject.toml
backend/: agent.py  chat.py  config.py  dispatcher.py  github.py  init_project.py  logging_config.py  models.py  server.py
backend/connectors/: base.py  http.py  local.py
config/: projects.yaml
docs/: WORKFLOW.md
frontend/: index.html  project.html
frontend/css/: style.css
frontend/js/: app.js  detail.js  kanban.js
infra/: Dockerfile  docker-compose.yml  setup.sh
infra/backup/: db_backup_cron.sh
manager/: agent.py  cc_launcher.py  config.yaml  log_monitor.py  plan_reviewer.py  task_dispatcher.py
manager/web/: server.py
manager/web/static/: manifest.json
plans/draft/: 4b05a713.plan.json
scripts/: merge_worktrees.sh  setup.sh  voice_input.py  worktree_manager.sh
tasks/completed/: 03233922.md  05df4d12.md  0770935e.md  1f2bdaa7.md  2798b478.md  2c478357.md  40a3c082.md  4170b303.md  4d05a2a0.md  625e10cc.md  67e7d0d4.md  6979ffbb.md  69eb01ac.md  819367ce.md  8ce62904.md  8f4f68df.md  947d3d74.md  959d8266.md  9cd8e3b9.md  a77ef077.md  b81540e1.md  cf739fe5.md  d23484d0.md  d3b17f68.md  d44e069a.md  d4f7dcfc.md  df2080d9.md  e4510512.md  eeb2c9fe.md  faea0733.md
tasks/failed/: 0ed20091.md  0f928cb2.md  119cde21.md  17e2fb28.md  46db7b47.md  728e8549.md  7ced098d.md  c07ef108.md  c5e8c1e8.md  e431c845.md  e5f87424.md  f6064fe5.md  fe69954d.md
tasks/in_progress/: c0c870fd.md
tests/: test_agent_merge.py  test_chat.py  test_config.py  test_plan_mode.py
(+1 files in other folders)
